--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         </div>
 
                         <div class="sec4imgin">
-                            <h2>Withdraw your warnings</h2>
+                            <h2>Withdraw your earnings</h2>
                             <p>Your money can be withdrawn via any payment method of your choice.</p>
                         </div>
                     </div>
@@ -214,7 +214,7 @@
                         </div>
 
                         <div class="sec4imgin">
-                            <h2>Whats yoru vehicle?</h2>
+                            <h2>Whats your vehicle?</h2>
                             <p>Even truck drivers have a chance with zug!! We've created an opportunity for every one.</p>
                         </div>
                     </div>
