--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
             <div class="section4_content">
                 <!-- 1 -->
-                <div class="sec4img">
+                <div class="sec4img" style="background-image: url('/Images/money_count.png');">
                     <div class="sec4imgin1">
                         <div class="head">
                             <p>Earn money</p>
